# homelab

./: .ansible-lint  .ansible-lint-ignore  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .markdownlint.yaml  .shellcheckrc  .tool-versions  .worktreeinclude  .yamllint  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.lab-runtime  LICENSE  Makefile  README.md  Vagrantfile  _typos.toml  airsonos.service  ansible.cfg  avahi.service  bootstrap.yml  bunk.yml  cadvisor.service  compose.service  couchpotato.service  docker-compose.yml  gitlab-runner.service  gitlab.service  hosts.ini  hypervisor.sublime-project  hypervisor.sublime-workspace  hypervisors.yml  inventory.py  main.py  mise.toml  nginx.service  openvpn.service  (+16 more)
.claude/: settings.json
.codex/: hooks.json
.githooks/: pre-commit
.github/: ci-lab-roles.txt  ci-minimal-roles.txt
.old/: .gitignore  Vagrantfile  requirements.txt
_old/: hosts.ini  hypervisors.yml  site.yml
ansible/: .gitignore  ansible.cfg  hosts.ini  playbook.yml
ansible2/: ansible.cfg  hosts.ini  site.yml
callback_plugins/: digest.py
config/: postfix_selections
data/: network_topology.schema.json  network_topology.yml  wan_probe_ports.yml
files/: HTPC.xml  ansible_rsa.enc  lsgroup  vfio-bind.j2
filter_plugins/: cidr_exclude.py  homelab.py  wireguard_psk.py
group_data/: all.py
group_vars/: all.yml  prod.yml  test.yml
host_vars/: backup.yml  box-podman.yml  box-qemu-minimal.yml  box-qemu.yml  box.yml  bunk.yml  fox.yml  homelab.yml  lab-qemu.yml  lab.yml  minimal.yml  pom.yml  pug-qemu.yml  pug.yml  udm.yml
lint/: check_md_links.py  check_notes_frontmatter.py  fluentbit.yml  git_ls_existing.sh  selene.toml  stylua.toml
mise-tasks/: pre-commit
notes/: authelia_rollout.md  bazarr_test_blocking_imports.md  concurrency_rework.md  fan2go_migration.md  github-actions-ci.md  iptables-to-nftables-migration.md  lab-ram-freeup-plan.md  lab-retire-md127-swap.sh  launch-machine-fold-plan.md  macos-vm-design.md  network_review.md  (+20 more)
(+2045 files in other folders)
