[project]
name = "homelab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyinfra>=3.5.1",
    "ansible>=13.0.0",
    "ansible-lint>=25.11.0",
    "black>=25.11.0",

    # for ansible modules
    "jmespath>=1.0.1", # json_query
    "netaddr>=1.3.0", # ipmath
    "passlib>=1.7.4", # mosquitto_passwd
]
