[project]
name = "homelab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyinfra>=3.5.1",
    "ansible>=13.0.0",
    "ansible-lint>=25.11.0",
    "mitogen>=0.3.27",
    "black>=25.11.0",
    "yamllint>=1.38.0",
    "tabulate>=0.9.0",
    # for ansible modules
    "jmespath>=1.0.1", # json_query
    "netaddr>=1.3.0", # ipmath
    "passlib>=1.7.4", # mosquitto_passwd
    "dnspython>=2.8.0", # dig
]

[tool.black]
line-length = 250
