[project]
name = "homelab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "ansible>=13.6.0",
  "ansible-lint>=25.11.0",
  "mitogen>=0.3.27",
  "black>=25.11.0",
  "ruff>=0.14.5",
  "yamllint>=1.38.0",
  "tabulate>=0.9.0",
  # for ansible modules
  "jmespath>=1.0.1",          # json_query
  "netaddr>=1.3.0",           # ipmath
  "passlib>=1.7.4",           # mosquitto_passwd
  "dnspython>=2.8.0",         # dig
  "pytest>=8.0",
  "check-jsonschema>=0.37.2", # lint:topology (a dep, not uvx, so it's CI-cached)
  "boto3>=1.40.0",            # mise-tasks/ci/{reap-qemu-images,audit-aws}.py (in-process S3/EC2 calls)
]

[tool.black]
line-length = 120

[tool.ruff]
exclude = [".claude"]

[tool.ruff.lint]
extend-select = ["B", "I", "PERF", "PIE", "PT", "RET", "RUF", "SIM", "UP"]

[tool.pytest.ini_options]
testpaths = ["unit_tests"]
pythonpath = [".", "test"]
